TestSuite/errors/err0035.pas
procedure Test;
type TClass = class
end;
begin
end;

begin
end.